# Petpeter

./: LICENSE  README.md  api.py  pyproject.toml  run.sh
module/: ASK.py  alike.py  always.py  bite.py  crawl.py  dontTouch.py  download.py  eat.py  kisskiss.py  littleangel.py  loading.py  pat.py  petpet.py  play.py  playGame.py  police.py  rip.py  roll.py  rub.py  support.py  throw.py  turn.py  utils.py  worship.py
